20240323 추천 비추천 기능 추가

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -65,6 +65,9 @@
                                     <button type="submit" class="btn btn-primary btn-user btn-block">
                                         로그인
                                     </button>
+                                    <a href="/" class="btn btn-info btn-user btn-block">
+                                        홈으로
+                                    </a>
                                     <hr>
                                     <a href="/oauth2/authorization/google" class="btn btn-outline-secondary btn-user btn-block">
                                         <img id="googleImg" src="/img/google.svg" style="width: 30px; height: auto;"/> 구글 계정 으로 로그인
