--- a/src/main/resources/templates/join.html
+++ b/src/main/resources/templates/join.html
@@ -69,6 +69,9 @@
                                 <button type="submit" class="btn btn-primary btn-user btn-block">
                                     가입하기
                                 </button>
+                                <a href="/" class="btn btn-info btn-user btn-block">
+                                    홈으로
+                                </a>
 <!--                                <hr>-->
 <!--                                <a href="index.html" class="btn btn-google btn-user btn-block">-->
 <!--                                    <i class="fab fa-google fa-fw"></i> Register with Google-->
