--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -59,7 +59,7 @@
                 </td>
                 <td style="text-align: center" th:text="${post.author}"></td>
                 <td style="text-align: center" th:text="${post.modifiedDate}"></td>
-                <td style="text-align: center" th:text="${post.recommend}"></td>
+                <td style="text-align: center" th:text="${post.recommendUp}"></td>
                 <td style="text-align: center" th:text="${post.view}"></td>
             </tr>
         </tbody>
